fix: get rid of hard taping on mobile devices

--- a/assets/styles/css/bundle.css
+++ b/assets/styles/css/bundle.css
@@ -439,6 +439,11 @@ body {
   overflow: hidden;
   display: none;
   z-index: 0;
+  /* Fix hard tapping on mobile */
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  touch-action: none;
 }
 
 .stage-background, .stage-background-with-trees {
